--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,3 +14,38 @@ body{
     position: absolute;
     left: 400px;
 }
+
+/* check box of tiptap*/
+.tiptap ul[data-type="taskList"] {
+  list-style: none;
+  padding: 0;
+}
+
+.tiptap ul[data-type="taskList"] li {
+  display: flex;
+  align-items: center;
+}
+
+.tiptap ul[data-type="taskList"] li > label {
+  flex: 0 0 auto;
+  margin-right: 0.5rem;
+  user-select: none;
+}
+
+.tiptap ul[data-type="taskList"] li > div {
+  flex: 1 1 auto;
+}
+.task-list {
+  list-style: none;
+  padding-left: 0;
+  margin: 0.5rem 0;
+}
+
+.task-item {
+  margin: 0.25rem 0;
+  align-items: flex-start;
+}
+
+.task-item input[type="checkbox"] {
+  cursor: default;
+}
